mobile clinic reception

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -283,6 +283,7 @@ haitimobileclinic.tasks.reporting                                     = Reportin
 haitimobileclinic.tasks.retrospectiveEntry                            = Retrospective Data Entry
 haitimobileclinic.tasks.viewDuplicates                                = View Patient Duplicates
 haitimobileclinic.title                                               = Haiti Mobile Clinic
+haitimobileclinic.tbScreening                                         = TB screening
 haitimobileclinic.today                                               = Today
 haitimobileclinic.toolTip.confirmDuplicate                            = This is a duplicate patient, add it to the list
 haitimobileclinic.toolTip.notDuplicate                                = This is not a duplicate, remove it from the list
