complete mobile clinic visit

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -278,7 +278,7 @@ haitimobileclinic.tasks.patientRegistration                           = Patient 
 haitimobileclinic.tasks.primaryCareReception                          = Primary Care Reception
 haitimobileclinic.tasks.primaryCareVisit                              = Primary Care Visit
 haitimobileclinic.tasks.mobileClinicReception                         = Mobile Clinic Reception
-haitimobileclinic.tasks.mobileClinicVisit                             = Mobile Clinic Visit
+haitimobileclinic.tasks.mobileClinic                                  = Mobile Clinic
 haitimobileclinic.tasks.reporting                                     = Reporting
 haitimobileclinic.tasks.retrospectiveEntry                            = Retrospective Data Entry
 haitimobileclinic.tasks.viewDuplicates                                = View Patient Duplicates
