--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -92,6 +92,7 @@ haitimobileclinic.general.clear                                       = Clear
 haitimobileclinic.general.finish                                      = Finish
 haitimobileclinic.general.next                                        = Next
 haitimobileclinic.home                                                = Home
+haitimobileclinic.htmlFormAccessTitle                                 = Forms
 haitimobileclinic.idCardCounter                                       = Card was printed %d times
 haitimobileclinic.idCardPrinted                                       = Last printing status date
 haitimobileclinic.identifier                                          = Identification number
