making new reports available

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -243,6 +243,11 @@ haitimobileclinic.reports.quality.category                            = Data and
 haitimobileclinic.reports.receiptSequence.title                       = Receipt sequences
 haitimobileclinic.reports.receptionEncounterWProvider.title           = Reception encounter with provider
 haitimobileclinic.reports.systemUsageReport.title                     = System Usage Report
+haitimobileclinic.reports.mobileClinicOverview.title                  = Mobile Clinic Overview
+haitimobileclinic.reports.patientVisitSummary.title                   = Patient Visit Summary
+haitimobileclinic.reports.referralReport.title                        = Referral Tracking
+haitimobileclinic.reports.necFollowupTbResults.title                  = NEC Followup with TB results
+haitimobileclinic.reports.missingConsultationsReport.title            = Missing consultations 
 haitimobileclinic.reprintIDCard                                       = Reprint ID card
 haitimobileclinic.returnToDashboard                                   = Return to patient dashboard
 haitimobileclinic.returnToSearch                                      = Return to patient search
