aligned all language versions

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,9 +1,10 @@
-
+general.clear    = Clear
 general.fromDate  = from
 general.loggedIn  = Currently logged in as
 general.logout    = Log out
 general.untilDate = until
 general.user      = User
+general.next     = Next
 
 haitimobileclinic.TelephoneNumber                                     = Telephone number
 haitimobileclinic.activitySummary                                     = Summary of Patient Registration Activity
@@ -61,9 +62,9 @@ haitimobileclinic.dateIDIssued                                        = Date ID 
 haitimobileclinic.day.long                                            = Day
 haitimobileclinic.day.short                                           = d
 haitimobileclinic.days                                                = days
-haitimobileclinic.diagnosisFor                                        = Diagnosis for %s
-haitimobileclinic.diagnosis                                           = Diagnosis
 haitimobileclinic.dental                                              = Dental
+haitimobileclinic.diagnosis                                           = Diagnosis
+haitimobileclinic.diagnosisFor                                        = Diagnosis for %s
 haitimobileclinic.distinctEncounters                                  = Number of encounters
 haitimobileclinic.distinctPatients                                    = Number of patients
 haitimobileclinic.doesHaveCard                                        = Does the patient have a card
@@ -74,7 +75,6 @@ haitimobileclinic.editPatientDetails                                  = Edit pat
 haitimobileclinic.encounter                                           = Encounter
 haitimobileclinic.encounterDate                                       = Encounter date
 haitimobileclinic.encounterType                                       = Encounter type
-haitimobileclinic.encounterType.1                                     = Reception
 haitimobileclinic.enterDetails                                        = Please enter this patient's details
 haitimobileclinic.enterOrScanIdentifier                               = Please enter or scan a patient identifier
 haitimobileclinic.enterPatientName                                    = Please enter patient's name
