--- a/omod/src/main/resources/messages_ht.properties
+++ b/omod/src/main/resources/messages_ht.properties
@@ -1,7 +1,9 @@
-
 general.clear    = Netwaye
+general.fromDate  = from
 general.loggedIn = Kounye a louvri sesyon an k\u00F2m
 general.logout   = Log soti
+general.untilDate = until
+general.user      = User
 general.next     = Prochen
 
 haitimobileclinic.TelephoneNumber                                     = Nimewo telef\u00F2n
@@ -18,8 +20,10 @@ haitimobileclinic.age.cantBeNegative                                  = Laj la p
 haitimobileclinic.age.year.tooHigh                                    = Antre yon laj ki pi piti pase 130 an.
 haitimobileclinic.ageEstimate                                         = Laj devine
 haitimobileclinic.ageRestrictedDisease                                = Laj restren maladi
+haitimobileclinic.alert.leavePageConfirmation                         = You have unsaved changes on this page.
 haitimobileclinic.allEncounterTypes                                   = Tout tip de rankont
 haitimobileclinic.allLocations                                        = Tout sit yo
+haitimobileclinic.allUsers                                            = All Users
 haitimobileclinic.attemptToAddPatient                                 = Ou tante mete nouvo pasyan sa a:
 haitimobileclinic.autoassign                                          = Enfomasyon yo ap otomikman asiyen
 haitimobileclinic.back                                                = Retounen
@@ -40,6 +44,7 @@ haitimobileclinic.cancel                                              = Anile
 haitimobileclinic.catchmentArea                                       = Z\u00F2n travay yo
 haitimobileclinic.changeEncounterTypeOrLocation                       = Chanje m\u00F2d rankont lan et kote li f\u00E8t la
 haitimobileclinic.changePrintingStatus                                = Chanje estati enprime
+haitimobileclinic.changeTask                                          = Change Task
 haitimobileclinic.choose                                              = Chwazi
 haitimobileclinic.clearEntry                                          = Kl\u00E8 antre
 haitimobileclinic.confirmAddNewPatient                                = Tanpri, konfime ke pasyan sa a pa nan lis pasyan sa yo ki deja sou sist\u00E8m nan:
@@ -49,6 +54,7 @@ haitimobileclinic.confirmPatient                                      = Konfime 
 haitimobileclinic.confirmPatientDetails                               = \u00C8ske enf\u00F2masyon yo k\u00F2r\u00E8k?
 haitimobileclinic.confirmPrintCard                                    = Ou vle enprime you kat pou pasyan sa a?
 haitimobileclinic.confirmPrintDossier                                 = Ou ta renmen enprime etiket dosye pasyan sa a?
+haitimobileclinic.confirm                                             = Confirm
 haitimobileclinic.continue                                            = Continye
 haitimobileclinic.createdBy                                           = Kreyat\u00E8
 haitimobileclinic.date                                                = Dat
@@ -86,10 +92,12 @@ haitimobileclinic.general.clear                                       = Netwaye
 haitimobileclinic.general.finish                                      = Fini
 haitimobileclinic.general.next                                        = Pwochen
 haitimobileclinic.home                                                = Paj ak\u00E8y
+haitimobileclinic.htmlFormAccessTitle                                 = Forms
 haitimobileclinic.idCardCounter                                       = Enprime %d fwa
 haitimobileclinic.idCardPrinted                                       = Denye fwa kat te enprime dat
 haitimobileclinic.identifier                                          = K\u00F2d pasyan
 haitimobileclinic.isPatientPresent                                    = Pasyan an la a?
+haitimobileclinic.issued                                              = Issued
 haitimobileclinic.jMessages.invalidAddressFormat                      = Adr\u00E8s ki pa k\u00F2r\u00E8k
 haitimobileclinic.jMessages.invalidAgeEstimate                        = Antre yon bon laj estime, tanpri 
 haitimobileclinic.jMessages.invalidBirthDate                          = Antre nan k\u00F2r\u00E8k dat nesans, tanpri
@@ -118,6 +126,7 @@ haitimobileclinic.menu.dentalDossier                                  = Dosye Da
 haitimobileclinic.menu.enterDentalDossier                             = Dant\u00E8 Nimewo dosye pasyan an?
 haitimobileclinic.menu.enterNumero                                    = Nimewo dosye pasyan an?
 haitimobileclinic.menu.numero                                         = Nimewo Dosye
+haitimobileclinic.menu.present                                        = Present
 haitimobileclinic.menu.printDossierLabel                              = Enprime sou etik\u00E8t la dosye
 haitimobileclinic.menu.printIdCard                                    = Enprime idantifikasyon kat
 haitimobileclinic.mergePatients                                       = Fizyone pasyan
@@ -204,6 +213,7 @@ haitimobileclinic.person.identifier.mustHaveLocation                  = F\u00F2k
 haitimobileclinic.person.lastName                                     = Nom
 haitimobileclinic.person.name                                         = Non
 haitimobileclinic.person.primaryIdentifier.required                   = K\u00F2d prim\u00E8 pasyan an obligatwa
+haitimobileclinic.person.returnToBirthdate                            = Enter exact birthdate
 haitimobileclinic.printRegistrationLabel                              = Enprime etik\u00E8t anrejistreman an
 haitimobileclinic.provider                                            = Dokt\u00E8
 haitimobileclinic.reenterIdentifier                                   = Tape k\u00F2d pasyan an ank\u00F2
@@ -215,7 +225,6 @@ haitimobileclinic.removeDuplicate                                     = \u00C8sk
 haitimobileclinic.reportAgeRestrictedDisease                          = \u00C8ske ou s\u00E8ten dyagnostik sa a ki apwopriye pou laj sa a
 haitimobileclinic.reportDisease                                       = Silvoupl\u00E8 rap\u00F2te ka sa a bay Direkt\u00E8 a sit medikal imedyatman
 haitimobileclinic.reports                                             = Rap\u00F2
-haitimobileclinic.reports.LQAS25.title                                = LQAS 25
 haitimobileclinic.reports.accounting.category                         = Kontablite
 haitimobileclinic.reports.accountingReport.title                      = Journalier de caisse (MSPP) (j)
 haitimobileclinic.reports.catchmentReport.title                       = Rap\u00F2 sou kote enrejistreman f\u00E8t la
@@ -223,6 +232,7 @@ haitimobileclinic.reports.dataQualityReport.title                     = Enskrips
 haitimobileclinic.reports.diagnosisQualityReport.title                = Pasyan swen dyagnostik kalite
 haitimobileclinic.reports.dossierDataQuality.title                    = Dossier nimewo regilarite
 haitimobileclinic.reports.implausibleDiagnosis.title                  = Dyagnostik enposib pou laj
+haitimobileclinic.reports.LQAS25.title                                = LQAS 25
 haitimobileclinic.reports.missingDiagnosesReport.title                = Manke dyagnostik (s)
 haitimobileclinic.reports.msppHealthServicesReport.title              = Services de sante (MSPP) (m)
 haitimobileclinic.reports.msppNotifiableDiseases.title                = Surveillance hebdomadaire (MSPP) (s)
@@ -232,6 +242,12 @@ haitimobileclinic.reports.programOverview.category                    = Rezime p
 haitimobileclinic.reports.quality.category                            = Done ak bon jan kalite s\u00E8vis
 haitimobileclinic.reports.receiptSequence.title                       = Resi sekans
 haitimobileclinic.reports.receptionEncounterWProvider.title           = Rapo A.K.I
+haitimobileclinic.reports.systemUsageReport.title                     = System Usage Report
+haitimobileclinic.reports.mobileClinicOverview.title                  = Mobile Clinic Overview
+haitimobileclinic.reports.patientVisitSummary.title                   = Patient Visit Summary
+haitimobileclinic.reports.referralReport.title                        = Referral Tracking
+haitimobileclinic.reports.necFollowupTbResults.title                  = NEC Followup with TB results
+haitimobileclinic.reports.missingConsultationsReport.title            = Missing consultations 
 haitimobileclinic.reprintIDCard                                       = Enprime fwa
 haitimobileclinic.returnToDashboard                                   = Retounen nan tablo rezime pasyan
 haitimobileclinic.returnToSearch                                      = Retounen nan chache pasyan
@@ -243,6 +259,7 @@ haitimobileclinic.searchingMatchingPatients                           = Rech\u00
 haitimobileclinic.searchingSimilarPatients                            = Rech\u00E8ch pou pasyan ki sanble...
 haitimobileclinic.selectEncounterTypeAndLocation                      = Tanpri, chwazi m\u00F2d rankont lan et kote li ap f\u00E8t
 haitimobileclinic.selectExistingPatient                               = ...oubyen chwazi yon pasyan ki te egziste deja
+haitimobileclinic.selectLocation                                      = Where are you working?\r\n
 haitimobileclinic.selectMatch                                         = Tanpri chwazi koresponn ak oswa uncoded
 haitimobileclinic.selectPatient                                       = Chwazi pasyan an nan lis rezilta potansy\u00E8l la 
 haitimobileclinic.selectService                                       = Chwazi yon travay
@@ -266,10 +283,13 @@ haitimobileclinic.tasks.patientLookup                                 = Ch\u00E8
 haitimobileclinic.tasks.patientRegistration                           = Arejistreman pasyan
 haitimobileclinic.tasks.primaryCareReception                          = K\u00E8s
 haitimobileclinic.tasks.primaryCareVisit                              = Istwa malad la
+haitimobileclinic.tasks.mobileClinicReception                         = Mobile Clinic Reception
+haitimobileclinic.tasks.mobileClinic                                  = Mobile Clinic
 haitimobileclinic.tasks.reporting                                     = Rap\u00F2
 haitimobileclinic.tasks.retrospectiveEntry                            = Retrospektiv done antre
 haitimobileclinic.tasks.viewDuplicates                                = Gade pasyan diplikata
 haitimobileclinic.title                                               = Haiti Mobile Clinic 
+haitimobileclinic.tbScreening                                         = TB screening
 haitimobileclinic.today                                               = Jodia
 haitimobileclinic.toolTip.confirmDuplicate                            = Sa a se yon pasyan doub, ajoute li sou lis la
 haitimobileclinic.toolTip.notDuplicate                                = Sa se pa yon doub, retire li nan lis la
