--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -289,13 +289,13 @@ haitimobileclinic.tasks.patientLookup                                 = Ch\u00E8
 haitimobileclinic.tasks.patientRegistration                           = Arejistreman pasyan
 haitimobileclinic.tasks.primaryCareReception                          = K\u00E8s
 haitimobileclinic.tasks.primaryCareVisit                              = Istwa malad la
-haitimobileclinic.tasks.mobileClinicReception                         = Mobile Clinic Reception
-haitimobileclinic.tasks.mobileClinic                                  = Mobile Clinic
+haitimobileclinic.tasks.mobileClinicReception                         = Mobile Clinic R\u00E8ception
+haitimobileclinic.tasks.mobileClinic                                  = Clinique mobile
 haitimobileclinic.tasks.reporting                                     = Rap\u00F2
 haitimobileclinic.tasks.retrospectiveEntry                            = Retrospektiv done antre
 haitimobileclinic.tasks.viewDuplicates                                = Gade pasyan diplikata
 haitimobileclinic.title                                               = Haiti Mobile Clinic 
-haitimobileclinic.tbScreening                                         = TB screening
+haitimobileclinic.tbScreening                                         = D\u00E8pistage TB
 haitimobileclinic.today                                               = Jodia
 haitimobileclinic.toolTip.confirmDuplicate                            = Sa a se yon pasyan doub, ajoute li sou lis la
 haitimobileclinic.toolTip.notDuplicate                                = Sa se pa yon doub, retire li nan lis la
