translations for JSPs

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -306,3 +306,28 @@ haitimobileclinic.year.short                                          = y
 haitimobileclinic.years                                               = Years
 haitimobileclinic.yes                                                 = Yes
 haitimobileclinic.youHaveEntered                                      = You have entered:
+
+haitimobileclinic.name = Name
+haitimobileclinic.site = Clinic
+haitimobileclinic.chwNames = CHW names
+haitimobileclinic.necNames = NEC names
+haitimobileclinic.screeningVisit = Screening Visit
+haitimobileclinic.age = Age
+haitimobileclinic.tbResultsAndStatus = TB Results and Status
+haitimobileclinic.mobileVisitDate = Mobile Visit Date
+haitimobileclinic.confirmativeTbDate = Confirmative TB Date
+haitimobileclinic.staticVisitDate = Static Visit Date
+haitimobileclinic.pendingEnrollmentsFor = Pending enrollments for
+haitimobileclinic.necNames2  = NEC names (up to 2)
+haitimobileclinic.setDefaults = Set defaults
+haitimobileclinic.chwNames3 = CHW names (up to 3)
+haitimobileclinic.gpsCoordinates = GPS coordinates
+haitimobileclinic.localityHabitation = Locality Habitation
+haitimobileclinic.sectionCommunale = Section communale
+haitimobileclinic.commune = Commune
+haitimobileclinic.department = Departement
+haitimobileclinic.country = Country
+haitimobileclinic.clinicLocation = Clinic Location
+haitimobileclinic.clinicDate = Clinic Date
+haitimobileclinic.staticClinicUnchangeable = Institution sanitaire (inchangeable)
+haitimobileclinic.settingDefaults = Settings defaults for the current data entry session.
