--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -312,3 +312,28 @@ haitimobileclinic.year.short                                          = a
 haitimobileclinic.years                                               = Lane
 haitimobileclinic.yes                                                 = Wi
 haitimobileclinic.youHaveEntered                                      = Ou te rantre:
+
+haitimobileclinic.name = Nom
+haitimobileclinic.site = Clinic
+haitimobileclinic.chwNames = Noms du CHW
+haitimobileclinic.necNames = Noms du NEC
+haitimobileclinic.screeningVisit = Screening Visit
+haitimobileclinic.age = Laj
+haitimobileclinic.tbResultsAndStatus = TB Results and Status
+haitimobileclinic.mobileVisitDate = Mobile Visit Date
+haitimobileclinic.confirmativeTbDate = Confirmative TB Date
+haitimobileclinic.staticVisitDate = Static Visit Date
+haitimobileclinic.pendingEnrollmentsFor = Pending enrollments for
+haitimobileclinic.necNames2  = Noms du NEC (up to 2)
+haitimobileclinic.setDefaults = Fixer les param\u00E8tres par d\u00E9faut
+haitimobileclinic.chwNames3 = Noms du CHW (up to 3)
+haitimobileclinic.gpsCoordinates = Coordonn\u00E9es GPS
+haitimobileclinic.localityHabitation = Localit\u00E9
+haitimobileclinic.sectionCommunale = Section communale
+haitimobileclinic.commune = Commune
+haitimobileclinic.department = D\u00E9partement
+haitimobileclinic.country = Pays
+haitimobileclinic.clinicLocation = Emplacement de la Clinique Mobile
+haitimobileclinic.clinicDate = Date de la Clinique
+haitimobileclinic.staticClinicUnchangeable = Institution sanitaire (inchangeable)
+haitimobileclinic.settingDefaults = Param\u00E8tres par d\u00E9faut pour la saisie en cours
