localization for openmrs portlet

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -313,6 +313,7 @@ haitimobileclinic.chwNames = CHW names
 haitimobileclinic.necNames = NEC names
 haitimobileclinic.screeningVisit = Screening Visit
 haitimobileclinic.age = Age
+haitimobileclinic.tbResults = TB Results
 haitimobileclinic.tbResultsAndStatus = TB Results and Status
 haitimobileclinic.mobileVisitDate = Mobile Visit Date
 haitimobileclinic.confirmativeTbDate = Confirmative TB Date
@@ -329,5 +330,11 @@ haitimobileclinic.department = Departement
 haitimobileclinic.country = Country
 haitimobileclinic.clinicLocation = Clinic Location
 haitimobileclinic.clinicDate = Clinic Date
-haitimobileclinic.staticClinicUnchangeable = Institution sanitaire (inchangeable)
+haitimobileclinic.staticClinicUnchangeable = Static clinic (unchangeable)
 haitimobileclinic.settingDefaults = Settings defaults for the current data entry session.
+haitimobileclinic.mobileClinicConsultations = Mobile Clinic Consultations
+haitimobileclinic.staticClinicEnrollments = Static Clinic Enrollments
+haitimobileclinic.enterNew = Enter new 
+haitimobileclinic.seeEncountersTab = (see Encounters tab to show all) 
+haitimobileclinic.previous = Previous 
+haitimobileclinic.noPreviousEncountersYet = No previous encounters yet  
