--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -319,7 +319,8 @@ haitimobileclinic.chwNames = Noms du CHW
 haitimobileclinic.necNames = Noms du NEC
 haitimobileclinic.screeningVisit = Screening Visit
 haitimobileclinic.age = Laj
-haitimobileclinic.tbResultsAndStatus = TB Results and Status
+haitimobileclinic.tbResults = R\u00E9sultats TB
+haitimobileclinic.tbResultsAndStatus = R\u00E9sultats et statut TB
 haitimobileclinic.mobileVisitDate = Mobile Visit Date
 haitimobileclinic.confirmativeTbDate = Confirmative TB Date
 haitimobileclinic.staticVisitDate = Static Visit Date
@@ -337,3 +338,10 @@ haitimobileclinic.clinicLocation = Emplacement de la Clinique Mobile
 haitimobileclinic.clinicDate = Date de la Clinique
 haitimobileclinic.staticClinicUnchangeable = Institution sanitaire (inchangeable)
 haitimobileclinic.settingDefaults = Param\u00E8tres par d\u00E9faut pour la saisie en cours
+haitimobileclinic.mobileClinicConsultations = Mobile Clinic Consultations
+haitimobileclinic.staticClinicEnrollments = Static Clinic Enrollments
+haitimobileclinic.enterNew = Entrer le nouveau
+haitimobileclinic.seeEncountersTab = (voir l'onglet Rencontres de montrer à tous) 
+haitimobileclinic.previous = Pr\u00E9c\u00E9dent 
+haitimobileclinic.noPreviousEncountersYet = Non pr\u00E9c\u00E9dent rencontre encore
+ 
