coded and non-coded diagnoses exports

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -338,3 +338,7 @@ haitimobileclinic.enterNew = Enter new
 haitimobileclinic.seeEncountersTab = (see Encounters tab to show all) 
 haitimobileclinic.previous = Previous 
 haitimobileclinic.noPreviousEncountersYet = No previous encounters yet  
+
+haitimobileclinic.reports.export.category = Data exports
+haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
+haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses export
