--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -345,3 +345,6 @@ haitimobileclinic.seeEncountersTab = (voir l'onglet Rencontres de montrer à tous
 haitimobileclinic.previous = Pr\u00E9c\u00E9dent 
 haitimobileclinic.noPreviousEncountersYet = Non pr\u00E9c\u00E9dent rencontre encore
  
+ haitimobileclinic.reports.export.category = Data exports
+haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
+haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses export
