--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -338,6 +338,9 @@ haitimobileclinic.enterNew = Enter new
 haitimobileclinic.seeEncountersTab = (see Encounters tab to show all) 
 haitimobileclinic.previous = Previous 
 haitimobileclinic.noPreviousEncountersYet = No previous encounters yet  
+haitimobileclinic.referralsHivMalnutritionNote = Only patients with pending referrals are listed. If a patient is missing, <a href="/openmrs/findPatient.htm">Find the patient</a> and check the referral section of the last Mobile Clinic Consultation Sheet(s) and make sure the patient is not yet enrolled with a matching Static Clinic Enrollment.
+haitimobileclinic.referralsTbNote = Only patients with pending referrals and a confirmed BT status are listed. If a patient is missing, <a href="/openmrs/findPatient.htm">Find the patient</a> and check the referral section of the last Mobile Clinic Consultation Sheet(s) and confirm the <a href="/openmrs/module/haitimobileclinic/tbResults.form">TB status</a> for this patient.
+haitimobileclinic.tbResultsNote = Only patients with pending TB referrals are listed. If a patient is missing, <a href="/openmrs/findPatient.htm">Find the patient</a> and check the referral section of the last Mobile Clinic Consultation Sheet(s) and make sure the patient is not yet enrolled with a matching Static Clinic Enrollment.
 
 haitimobileclinic.reports.export.category = Data exports
 haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
