--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -344,7 +344,10 @@ haitimobileclinic.enterNew = Entrer le nouveau
 haitimobileclinic.seeEncountersTab = (voir l'onglet Rencontres de montrer à tous) 
 haitimobileclinic.previous = Pr\u00E9c\u00E9dent 
 haitimobileclinic.noPreviousEncountersYet = Non pr\u00E9c\u00E9dent rencontre encore
+haitimobileclinic.referralsHivMalnutritionNote = Seuls les patients en attente de r\u00E9f\u00E9rence sont dans la liste. Si un patient manque, <a href="/openmrs/findPatient.htm">Trouver le patient</a> et v\u00E9rifier la section r\u00E9f\u00E9rence de la derni\u00E8re forme de consultation en clinique mobile et s\u2019assurer que le patient n\u2019est pas encore enrôl\u00E9 dans un hopital pour le VIH ou la Malnutrition. 
+haitimobileclinic.referralsTbNote = Only patients with pending referrals and a confirmed BT status are listed. If a patient is missing, <a href="/openmrs/findPatient.htm">Find the patient</a> and check the referral section of the last Mobile Clinic Consultation Sheet(s) and confirm the <a href="/openmrs/module/haitimobileclinic/tbResults.form">TB status</a> for this patient.
+haitimobileclinic.tbResultsNote = Seulement les patients avec une r\u00E9f\u00E9rence en cours pour la TB sont dans la liste. Si un patient manque, <a href="/openmrs/findPatient.htm">Trouver le patient</a> et v\u00E9rifier dans la section r\u00E9f\u00E9rence de la derni\u00E8re forme de consultation en mobile Clinique et s\u2019assurer que le patient n\u2019est pas encore enrôl\u00E9 dans un hopital pour la TB.
  
- haitimobileclinic.reports.export.category = Data exports
+haitimobileclinic.reports.export.category = Data exports
 haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
 haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses export
