shorter report names

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -343,5 +343,5 @@ haitimobileclinic.referralsTbNote = Only patients with pending referrals and a c
 haitimobileclinic.tbResultsNote = Only patients with pending TB referrals are listed. If a patient is missing, <a href="/openmrs/findPatient.htm">Find the patient</a> and check the referral section of the last Mobile Clinic Consultation Sheet(s) and make sure the patient is not yet enrolled with a matching Static Clinic Enrollment.
 
 haitimobileclinic.reports.export.category = Data exports
-haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
-haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses export
+haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses
+haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses
