--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -349,5 +349,5 @@ haitimobileclinic.referralsTbNote = Only patients with pending referrals and a c
 haitimobileclinic.tbResultsNote = Seulement les patients avec une r\u00E9f\u00E9rence en cours pour la TB sont dans la liste. Si un patient manque, <a href="/openmrs/findPatient.htm">Trouver le patient</a> et v\u00E9rifier dans la section r\u00E9f\u00E9rence de la derni\u00E8re forme de consultation en mobile Clinique et s\u2019assurer que le patient n\u2019est pas encore enrôl\u00E9 dans un hopital pour la TB.
  
 haitimobileclinic.reports.export.category = Data exports
-haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses export
-haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses export
+haitimobileclinic.reports.codedDiagnosesExportReport.title = Coded Primary Diagnoses
+haitimobileclinic.reports.noncodedDiagnosesExportReport.title = Non-coded primary diagnoses
